--- a/Speciality-Metals/src/app/components/incoming/view-incomings/view-incomings.component.html
+++ b/Speciality-Metals/src/app/components/incoming/view-incomings/view-incomings.component.html
@@ -26,9 +26,11 @@
         <input matInput
                formControlName="sundry_Note_ID"
                [matAutocomplete]="sundryAuto"
-               placeholder="Please select a delivery note" />
-        <mat-autocomplete #sundryAuto="matAutocomplete" [displayWith]="displaySundryNote">
-          <mat-option *ngFor="let note of filteredSundryNotes | async" [value]="note">
+               placeholder="Select delivery note" />
+        <mat-autocomplete #sundryAuto="matAutocomplete" 
+                         [displayWith]="displaySundryNote">
+          <mat-option *ngFor="let note of filteredSundryNotes | async" 
+                      [value]="note">
             {{note.sundry_Note}}
           </mat-option>
         </mat-autocomplete>
@@ -151,8 +153,10 @@
       </ng-container>
 
       <ng-container matColumnDef="gRV_ID">
-        <th mat-header-cell *matHeaderCellDef>GRV ID</th>
-        <td mat-cell *matCellDef="let incoming">{{ incoming.gRV_ID }}</td>
+        <th mat-header-cell *matHeaderCellDef>GRV Number</th>
+        <td mat-cell *matCellDef="let incoming">
+          {{ incoming.grvNumber }}
+        </td>
       </ng-container>
 
       <ng-container matColumnDef="supplierName">
