--- a/Speciality-Metals/src/app/components/Sundry/sundry/sundry.component.html
+++ b/Speciality-Metals/src/app/components/Sundry/sundry/sundry.component.html
@@ -68,7 +68,7 @@
     </div>
 
     <div class="input-row">
-      <button mat-raised-button class="print" (click)="printLabel()">
+      <button mat-raised-button class="print" (click)="printLabel($event)">
         <mat-icon>print</mat-icon>
         Label
       </button>
