--- a/Speciality-Metals/src/app/components/incoming/view-incomings/view-incomings.component.html
+++ b/Speciality-Metals/src/app/components/incoming/view-incomings/view-incomings.component.html
@@ -175,8 +175,8 @@
       </ng-container>
 
       <ng-container matColumnDef="sundry_Note_ID">
-        <th mat-header-cell *matHeaderCellDef>Sundry Note ID</th>
-        <td mat-cell *matCellDef="let incoming">{{ incoming.sundry_Note_ID }}</td>
+        <th mat-header-cell *matHeaderCellDef>Sundry Note</th>
+        <td mat-cell *matCellDef="let incoming">{{ incoming.sundryNoteNumber }}</td>
       </ng-container>
 
       <ng-container matColumnDef="actions">
